corrected class footer__links-wrap

--- a/css/index.css
+++ b/css/index.css
@@ -883,7 +883,7 @@
     padding-bottom: 45px;
 }
 
-.footer__tell-mail {
+.footer__links-wrap {
     flex-direction: column;
 }
 
